--- a/requirements.txt
+++ b/requirements.txt
@@ -13,12 +13,14 @@ django-templated-mail==1.1.1
 djangorestframework==3.12.4
 djangorestframework-simplejwt==4.7.1
 djoser==2.1.0
+gunicorn==20.1.0
 idna==2.10
 itypes==1.2.0
 Jinja2==3.0.1
 MarkupSafe==2.0.1
 oauthlib==3.1.1
 pkg-resources==0.0.0
+psycopg2==2.9.1
 pycparser==2.20
 PyJWT==2.1.0
 python3-openid==3.2.0
